[CHU-88]-bug: Fixed issue on mobile navigation (#25)

--- a/app/sections/navigation/components/desktop-nav/styles.module.scss
+++ b/app/sections/navigation/components/desktop-nav/styles.module.scss
@@ -14,7 +14,7 @@
 }
 
 .searchWrapper {
-  width: 430px;
+  max-width: 430px;
 }
 
 .rightMenuWrapper {
