--- a/app/sections/navigation/components/search-bar/styles.module.scss
+++ b/app/sections/navigation/components/search-bar/styles.module.scss
@@ -2,10 +2,13 @@
 
 .wrapper {
   display: flex;
+  position: relative;
   align-items: center;
   justify-content: start;
   position: relative;
   grid-column: 1 / span 3;
+  min-width: 100%;
+  max-width: 430px;
 }
 
 .input {
